<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <CheckBox
        android:id="@+id/chbStopStartService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_start_stop"
        android:text="@string/start_stop"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_start_stop"
        android:text="@string/accelerometer"
        android:layout_above="@+id/chbStopStartService"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/etDelay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chbStopStartService"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:inputType="number"
        android:hint="@string/edit_text_delay" />
</RelativeLayout>